--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1286,7 +1286,7 @@ ul {
 .navbar .top-nav {
   width: 100%;
   padding: 15px 0px;
-  background: rgba(224, 212, 190, 0.3);
+  background: #f8f8f8;
   transition: all 0.3s linear;
 }
 .navbar .top-nav .contain {
@@ -1555,6 +1555,71 @@ header .image-content img {
      object-fit: cover;
   -o-object-position: center;
      object-position: center;
+}
+
+.sub-header {
+  width: 100%;
+  padding: 280px 0px 50px;
+  background: url("../images/login/login_pattern.webp") center/cover no-repeat;
+  position: relative;
+  z-index: 9;
+}
+.sub-header .contain {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  text-align: center;
+}
+.sub-header .contain h1 {
+  font-size: 30px;
+  font-weight: 900;
+  color: var(--dark-color);
+  margin-bottom: 20px;
+}
+.sub-header .contain .breadcurmb-data {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+}
+.sub-header .contain .breadcurmb-data li {
+  padding: 0px 20px;
+  position: relative;
+  z-index: 9;
+}
+.sub-header .contain .breadcurmb-data li::after {
+  content: "";
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  background: url("../images/icons/arrow.svg") center/contain no-repeat;
+  top: calc(50% - 12px);
+  left: -15px;
+  z-index: -1;
+}
+.sub-header .contain .breadcurmb-data li a, .sub-header .contain .breadcurmb-data li span {
+  color: var(--dark-color);
+  font-size: 15px;
+}
+.sub-header .contain .breadcurmb-data li span {
+  font-weight: 700;
+}
+.sub-header .contain .breadcurmb-data li a {
+  font-weight: 500;
+}
+.sub-header .contain .breadcurmb-data li:first-child {
+  -webkit-padding-start: 0px;
+          padding-inline-start: 0px;
+}
+.sub-header .contain .breadcurmb-data li:last-child {
+  -webkit-padding-end: 0px;
+          padding-inline-end: 0px;
+}
+.sub-header .contain .breadcurmb-data li:last-child::after {
+  display: none;
 }
 
 .brands .swiper-wrapper {
@@ -1909,6 +1974,204 @@ footer .copyrights p {
   font-size: 15px;
 }
 
+.login-page {
+  width: 100%;
+  height: 100vh;
+  padding: 30px 0px;
+  position: relative;
+  z-index: 9;
+  background-color: #fefefe;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+}
+.login-page::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  background: url("../images/login/login_pattern.webp") center/cover no-repeat;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  display: none;
+}
+.login-page .contain {
+  background-color: var(--light-color);
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px rgba(224, 212, 190, 0.3);
+  overflow: hidden;
+}
+.login-page .contain .loging-pattern {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  z-index: 9;
+}
+.login-page .contain .loging-pattern img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.login-page .contain .loging-pattern::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 50px;
+  top: calc(50% - 25px);
+  left: 0px;
+  background: url("../images/login/brand-pattern.svg") center/contain no-repeat;
+  z-index: 9;
+}
+.login-page .contain .login-contain {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  padding: 50px 30px;
+  text-align: center;
+}
+.login-page .contain .login-contain .brand-name img {
+  width: 200px;
+  height: 150px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  margin-bottom: 20px;
+}
+.login-page .contain .login-contain p {
+  color: var(--dark-color);
+  font-size: 18px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+.login-page .contain .login-contain h1 {
+  color: var(--dark-color);
+  font-size: 30px;
+  font-weight: 900;
+  margin-bottom: 20px;
+}
+.login-page .contain .login-contain .link {
+  font-size: 15px;
+  font-weight: 500;
+  color: var(--gray-color);
+  display: block;
+  text-align: end;
+  margin-top: 20px;
+}
+.login-page .contain .login-contain .link.text-start-shape {
+  text-align: start;
+}
+.login-page .contain .login-contain .link span {
+  color: #000;
+  font-weight: 700;
+}
+.login-page .contain .login-contain .link:hover span {
+  color: #E0D4BE;
+}
+
+.form-contain {
+  width: 100%;
+  position: relative;
+  z-index: 9;
+}
+.form-contain .from-group {
+  width: 100%;
+  height: 45px;
+  position: relative;
+  z-index: 9;
+  margin-bottom: 15px;
+}
+.form-contain .from-group img {
+  width: 24px;
+  height: 24px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  position: absolute;
+  top: calc(50% - 12px);
+  right: 12px;
+  pointer-events: none;
+  filter: var(--primary-filter) !important;
+}
+.form-contain .from-group .form-control {
+  width: 100%;
+  height: 100%;
+  background-color: var(--light-color);
+  border: 1px solid rgba(224, 212, 190, 0.3);
+  border-radius: 40px;
+  color: var(--dark-color);
+  font-size: 15px;
+  font-weight: 500;
+  -webkit-padding-start: 44px;
+          padding-inline-start: 44px;
+}
+.form-contain .from-group .form-control::-moz-placeholder {
+  color: var(--gray-color);
+  font-size: 15px;
+  font-weight: 500;
+}
+.form-contain .from-group .form-control:-ms-input-placeholder {
+  color: var(--gray-color);
+  font-size: 15px;
+  font-weight: 500;
+}
+.form-contain .from-group .form-control::placeholder {
+  color: var(--gray-color);
+  font-size: 15px;
+  font-weight: 500;
+}
+.form-contain .from-group:hover img {
+  -webkit-animation: tada 0.3s linear both;
+          animation: tada 0.3s linear both;
+}
+.form-contain .from-group:hover .form-control {
+  border-color: rgba(224, 212, 190, 0.3);
+}
+.form-contain .code_input .code-container input {
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  border-radius: 5px;
+  margin: 5px;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.02);
+  border: 1px solid rgba(224, 212, 190, 0.5);
+}
+.form-contain strong {
+  -webkit-margin-start: 10px;
+          margin-inline-start: 10px;
+  color: var(--primary-color);
+}
+.form-contain .underline {
+  color: var(--primary-color);
+  text-decoration: underline;
+}
+.form-contain .custom-btn {
+  width: 100%;
+  height: 45px;
+  border-radius: 40px;
+  outline: none;
+  border: 0px;
+  z-index: 9;
+  background-color: var(--primary-color);
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+}
+.form-contain .custom-btn span {
+  color: var(--dark-color);
+  font-size: 15px;
+  font-weight: 500;
+}
+.form-contain .custom-btn:hover span {
+  -webkit-animation: storm 0.4s linear !important;
+          animation: storm 0.4s linear !important;
+}
+
 @media (max-width: 999px) {
   .navbar.scrolled .navbar-nav {
     display: flex !important;
@@ -1967,6 +2230,9 @@ footer .copyrights p {
   header .image-content {
     height: 180px;
   }
+  .sub-header {
+    padding: 120px 0px 40px;
+  }
   .heading {
     margin-bottom: 20px;
   }
@@ -2006,5 +2272,51 @@ footer .contain.padding-contain {
   }
   footer .copyrights {
     margin-top: 20px;
+  }
+  .login-page .mobile-hidden {
+    display: none;
+  }
+  .login-page::after {
+    display: block;
+  }
+  .login-page .login-contain {
+    padding: 20px 15px;
+  }
+  .login-page .login-contain h1 {
+    font-size: 20px !important;
+  }
+  .login-page .login-contain .brand-name img {
+    height: 100px !important;
+  }
+  .login-page .login-contain .code_input .code-container input {
+    width: 35px;
+    height: 35px;
+  }
+  .brands .box {
+    height: 80px;
+  }
+  .product-box .image-content {
+    height: 100px;
+  }
+  .product-box .contain {
+    padding: 10px 0px;
+  }
+  .product-box .contain h2 {
+    font-size: 15px !important;
+  }
+  .product-box .contain .desc {
+    font-size: 12px !important;
+    margin: 8px 0px !important;
+  }
+  .product-box .contain .flex-data {
+    flex-direction: column;
+    padding-top: 8px;
+  }
+  .product-box .contain .flex-data .custom-btn {
+    width: 90%;
+    margin-top: 10px;
+  }
+  .products .swiper-wrapper {
+    padding-top: 15px;
   }
 }/*# sourceMappingURL=style.css.map */
