--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2086,6 +2086,16 @@ footer .copyrights p {
   z-index: 9;
   margin-bottom: 15px;
 }
+.form-contain .from-group.select-option::after {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 7px;
+  background: url("../images/down_arrow.svg") center/contain no-repeat;
+  left: 15px;
+  top: calc(50% - 3.5px);
+  z-index: 1;
+}
 .form-contain .from-group img {
   width: 24px;
   height: 24px;
@@ -2108,6 +2118,9 @@ footer .copyrights p {
   font-weight: 500;
   -webkit-padding-start: 44px;
           padding-inline-start: 44px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 .form-contain .from-group .form-control::-moz-placeholder {
   color: var(--gray-color);
@@ -2170,6 +2183,309 @@ footer .copyrights p {
 .form-contain .custom-btn:hover span {
   -webkit-animation: storm 0.4s linear !important;
           animation: storm 0.4s linear !important;
+}
+.form-contain .wrapper {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  align-content: flex-start;
+  cursor: pointer;
+  position: relative;
+}
+.form-contain .wrapper .radio-check {
+  -moz-appearance: none;
+       appearance: none;
+  -webkit-appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 3px;
+  border: 1px solid #E0D4BE;
+  background-color: #fff;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  z-index: 9;
+}
+.form-contain .wrapper .radio-check::after, .form-contain .wrapper .radio-check::before {
+  content: "";
+  position: absolute;
+  transition: all 0.2s linear;
+}
+.form-contain .wrapper .radio-check::after {
+  width: 100%;
+  height: 0px;
+  background-color: #E0D4BE;
+  z-index: -2;
+  top: 0;
+  left: 0;
+}
+.form-contain .wrapper .radio-check::before {
+  background: url("../images/form/check.svg") center/contain no-repeat;
+  width: 15px;
+  height: 15px;
+  transform: scale(0);
+  z-index: -1;
+  top: calc(50% - 7.5px);
+  left: calc(50% - 7.5px);
+}
+.form-contain .wrapper .radio-check:checked {
+  border-color: transparent;
+}
+.form-contain .wrapper .radio-check:checked::after {
+  height: 100%;
+}
+.form-contain .wrapper .radio-check:checked::before {
+  transform: scale(1);
+}
+.form-contain .wrapper .radio-title {
+  color: #000;
+  font-size: 16px;
+  font-weight: 500;
+  -webkit-margin-start: 10px;
+          margin-inline-start: 10px;
+  cursor: pointer;
+}
+
+.category-filter {
+  width: 100%;
+  padding: 20px 15px;
+  box-shadow: 0px 0px 10px rgba(224, 212, 190, 0.1);
+  border-radius: 10px;
+}
+.category-filter .category-head {
+  color: #000;
+  font-size: 25px;
+  font-weight: 900;
+  margin-bottom: 15px;
+}
+.category-filter .data-selected {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  padding-top: 10px;
+}
+.category-filter .data-selected .data {
+  margin-top: 10px !important;
+  padding: 11.5px 13px;
+  border-radius: 25px;
+  background-color: rgba(224, 212, 190, 0.06);
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  -webkit-margin-end: 10px;
+          margin-inline-end: 10px;
+}
+.category-filter .data-selected .data .name {
+  color: var(--dark-color);
+  font-size: 14px;
+  -webkit-margin-end: 13px;
+          margin-inline-end: 13px;
+}
+.category-filter .data-selected .data .close {
+  opacity: 1 !important;
+}
+.category-filter .data-selected .data .close img {
+  width: 18px;
+  height: 20px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.category-filter .data-selected .data:hover .close {
+  -webkit-animation: tada 0.3s both;
+          animation: tada 0.3s both;
+}
+.category-filter .category-desc {
+  color: #161615;
+  font-size: 16px;
+  font-weight: 500;
+  margin-bottom: 0px;
+}
+.category-filter .category-contain {
+  padding: 24px 0px;
+  border-bottom: 1px solid #E9E9E9;
+}
+.category-filter .category-contain:last-child {
+  border-bottom: 0px !important;
+}
+.category-filter .category-contain.low-margin {
+  padding-bottom: 0px !important;
+}
+.category-filter .category-contain .head {
+  font-size: 16px;
+  font-weight: 900;
+  margin-bottom: 20px;
+}
+.category-filter .category-contain .price-input {
+  display: flex;
+  width: 100%;
+  margin-top: 11px;
+}
+.category-filter .category-contain .price-input .field {
+  display: flex;
+  align-content: center;
+  align-items: center;
+}
+.category-filter .category-contain .price-input .field span {
+  font-size: 12px;
+  font-weight: 700;
+  color: #000;
+  -webkit-margin-end: 10px;
+          margin-inline-end: 10px;
+}
+.category-filter .category-contain .price-input .field .number {
+  padding: 0px;
+  color: #000;
+  font-size: 14px;
+  font-weight: 900;
+  border: 0px !important;
+  background-color: transparent !important;
+  -webkit-appearance: textfield !important;
+     -moz-appearance: textfield !important;
+          appearance: textfield !important;
+  width: 100px !important;
+}
+.category-filter .category-contain .price-input .field .number::-webkit-outer-spin-button, .category-filter .category-contain .price-input .field .number::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+          appearance: none;
+}
+.category-filter .category-contain .price-input .field .number:focus {
+  outline: none;
+}
+.category-filter .category-contain .slider {
+  width: 100%;
+  height: 4px;
+  background-color: rgba(95, 196, 180, 0.1);
+  border-radius: 2px;
+  position: relative;
+}
+.category-filter .category-contain .slider .progress-shape {
+  height: 5px;
+  position: absolute;
+  background-color: #E0D4BE;
+  border-radius: 5px;
+  left: 25%;
+  right: 25%;
+}
+.category-filter .category-contain .range-input {
+  position: relative;
+}
+.category-filter .category-contain .range-input input[type=range] {
+  position: absolute;
+  top: -5px;
+  height: 5px;
+  width: 100%;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+       appearance: none;
+  background: none;
+  pointer-events: none;
+}
+.category-filter .category-contain .range-input input[type=range]::-webkit-slider-thumb {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #fff;
+  border: 1px solid #E0D4BE;
+  -webkit-appearance: none;
+          appearance: none;
+  pointer-events: auto;
+}
+.category-filter .category-contain .range-input input[type=range]::-moz-slider-thumb {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #fff;
+  border: 1px solid #E0D4BE;
+  -moz-appearance: none;
+       appearance: none;
+  pointer-events: auto;
+}
+.category-filter .inputs-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+}
+.category-filter .inputs-wrapper .price-range-field {
+  border: 0px !important;
+  background-color: transparent !important;
+  color: #000000 !important;
+  font-size: 16px !important;
+  font-weight: 800 !important;
+  line-height: 25px !important;
+}
+.category-filter .flex-data {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
+}
+.category-filter .flex-data .wrapper {
+  margin-bottom: 10px;
+  -webkit-margin-end: 12px;
+          margin-inline-end: 12px;
+}
+
+.page-numbers {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+}
+.page-numbers .number-item {
+  -webkit-margin-end: 10px;
+          margin-inline-end: 10px;
+}
+.page-numbers .number-item:last-child {
+  margin: 0px !important;
+}
+.page-numbers .number-item .number-link {
+  width: 40px;
+  height: 40px;
+  border: 1px solid #E0D4BE;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  color: #E0D4BE;
+  font-size: 18px;
+  font-weight: 900;
+  line-height: 28px;
+}
+.page-numbers .number-item .number-link.active, .page-numbers .number-item .number-link:hover {
+  background-color: #E0D4BE;
+  color: #fff;
+}
+
+.ui-widget.ui-widget-content {
+  background-color: rgba(95, 196, 180, 0.1) !important;
+  border-radius: 4px !important;
+  border: 0px !important;
+}
+
+.ui-slider-horizontal .ui-slider-range,
+.ui-slider-horizontal .ui-slider-handle {
+  transition: all 0.2s linear !important;
+}
+
+.ui-slider-horizontal .ui-slider-handle {
+  width: 20px !important;
+  height: 20px !important;
+  background-color: #fff !important;
+  border-radius: 50% !important;
+  border: 1px solid #E0D4BE !important;
+  top: calc(50% - 10px) !important;
+}
+.ui-slider-horizontal .ui-slider-handle:focus, .ui-slider-horizontal .ui-slider-handle:hover, .ui-slider-horizontal .ui-slider-handle:active {
+  outline: none !important;
+  background: #fff !important;
+  border: 5px solid #E0D4BE !important;
 }
 
 @media (max-width: 999px) {
