--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1207,6 +1207,19 @@ footer {
     z-index: 9;
     margin-bottom: 15px;
 
+    &.select-option{
+      &::after{
+        content: '';
+        position: absolute;
+        width: 16px;
+        height: 7px;
+        background: url('../images/down_arrow.svg') center/contain no-repeat;
+        left: 15px;
+        top: calc(50% - 3.5px);
+        z-index: 1;
+      }
+    }
+
     img {
       width: 24px;
       height: 24px;
@@ -1228,6 +1241,7 @@ footer {
       font-size: 15px;
       font-weight: 500;
       padding-inline-start: 44px;
+      appearance: none;
 
       &::placeholder {
         color: var(--gray-color);
@@ -1290,6 +1304,339 @@ footer {
     &:hover span {
       animation: storm .4s linear !important;
     }
+  }
+
+  .wrapper{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+    cursor: pointer;
+    position: relative;
+
+    .radio-check {
+      appearance: none;
+      -webkit-appearance: none;
+      width: 25px;
+      height: 25px;
+      border-radius: 3px;
+      border: 1px solid #E0D4BE;
+      background-color: #fff;
+      cursor: pointer;
+      position: relative;
+      overflow: hidden;
+      z-index: 9;
+
+      &::after, &::before {
+        content: '';
+        position: absolute;
+        transition: all .2s linear;
+      }
+
+      &::after {
+        width: 100%;
+        height: 0px;
+        background-color: #E0D4BE;
+        z-index: -2;
+        top: 0;
+        left: 0;
+      }
+
+      &::before {
+        background: url('../images/form/check.svg') center / contain no-repeat;
+        width: 15px;
+        height: 15px;
+        transform: scale(0);
+        z-index: -1;
+        top: calc(50% - 7.5px);
+        left: calc(50% - 7.5px);
+      }
+
+      &:checked {
+        border-color: transparent;
+
+        &::after {
+          height: 100%;
+        }
+
+        &::before {
+          transform: scale(1);
+        }
+      }
+    }
+
+    .radio-title {
+      color: #000;
+      font-size: 16px;
+      font-weight: 500;
+      margin-inline-start: 10px;
+      cursor: pointer;
+    }
+  }
+}
+
+.category-filter {
+  width: 100%;
+  padding: 20px 15px;
+  box-shadow: 0px 0px 10px rgba($color: #E0D4BE, $alpha: 0.1);
+  border-radius: 10px;
+
+  .category-head {
+    color: #000;
+    font-size: 25px;
+    font-weight: 900;
+    margin-bottom: 15px;
+  }
+
+  .data-selected {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    padding-top: 10px;
+
+    .data {
+      margin-top: 10px !important;
+      padding: 11.5px 13px;
+      border-radius: 25px;
+      background-color: rgba($color: #E0D4BE, $alpha: .06);
+      display: flex;
+      align-items: center;
+      align-content: center;
+      justify-content: center;
+      margin-inline-end: 10px;
+
+      .name {
+        color: var(--dark-color);
+        font-size: 14px;
+        margin-inline-end: 13px;
+      }
+
+      .close {
+        opacity: 1 !important;
+
+        img {
+          width: 18px;
+          height: 20px;
+          object-fit: contain;
+        }
+      }
+
+      &:hover {
+        .close {
+          animation: tada .3s both;
+        }
+      }
+    }
+  }
+
+  .category-desc {
+    color: #161615;
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: 0px;
+  }
+
+  .category-contain {
+    padding: 24px 0px;
+    border-bottom: 1px solid #E9E9E9;
+
+    &:last-child {
+      border-bottom: 0px !important;
+    }
+
+    &.low-margin {
+      padding-bottom: 0px !important;
+    }
+
+    .head {
+      font-size: 16px;
+      font-weight: 900;
+      margin-bottom: 20px;
+    }
+
+    .price-input {
+      display: flex;
+      width: 100%;
+      margin-top: 11px;
+
+      .field {
+        display: flex;
+        align-content: center;
+        align-items: center;
+
+        span {
+          font-size: 12px;
+          font-weight: 700;
+          color: #000;
+          margin-inline-end: 10px;
+        }
+
+        .number {
+          padding: 0px;
+          color: #000;
+          font-size: 14px;
+          font-weight: 900;
+          border: 0px !important;
+          background-color: transparent !important;
+          appearance: textfield !important;
+          width: 100px !important; 
+
+          &::-webkit-outer-spin-button, &::-webkit-inner-spin-button {
+            appearance: none;
+          }
+
+          &:focus {
+            outline: none;
+          }
+        }
+      }
+    }
+
+    .slider {
+      width: 100%;
+      height: 4px;
+      background-color: rgba($color: #5FC4B4 , $alpha: 0.10);
+      border-radius: 2px;
+      position: relative;
+
+      .progress-shape {
+        height: 5px;
+        position: absolute;
+        background-color: #E0D4BE;
+        border-radius: 5px;
+        left: 25%;
+        right: 25%;
+      }
+    }
+
+    .range-input {
+      position: relative;
+
+      input[type="range"] {
+        position: absolute;
+        top: -5px;
+        height: 5px;
+        width: 100%;
+        -webkit-appearance: none;
+        appearance: none;
+        background: none;
+        pointer-events: none;
+
+        &::-webkit-slider-thumb {
+          width: 20px;
+          height: 20px;
+          border-radius: 50%;
+          background-color: #fff;
+          border: 1px solid #E0D4BE;
+          appearance: none;
+          pointer-events: auto;
+        }
+
+        &::-moz-slider-thumb {
+          width: 20px;
+          height: 20px;
+          border-radius: 50%;
+          background-color: #fff;
+          border: 1px solid #E0D4BE;
+          appearance: none;
+          pointer-events: auto;
+        }
+      }
+    }
+  }
+
+  .inputs-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+
+    .price-range-field {
+      border: 0px !important;
+      background-color: transparent !important;
+      color: #000000 !important;
+      font-size: 16px !important;
+      font-weight: 800 !important;
+      line-height: 25px !important;
+    }
+  }
+
+  .flex-data {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;
+
+    .wrapper {
+      margin-bottom: 10px;
+      margin-inline-end: 12px;
+    }
+  }
+}
+
+.page-numbers{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+
+  .number-item{
+    margin-inline-end: 10px;
+
+    &:last-child{
+      margin: 0px !important;
+    }
+
+    .number-link{
+      width: 40px;
+      height: 40px;
+      border: 1px solid #E0D4BE;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      align-content: center;
+      justify-content: center;
+      color: #E0D4BE;
+      font-size: 18px;
+      font-weight: 900;
+      line-height: 28px;
+
+      &.active , &:hover{
+        background-color: #E0D4BE;
+        color: #fff;
+      }
+    }
+  }
+}
+
+.ui-widget.ui-widget-content {
+  background-color: rgba($color: #5FC4B4 , $alpha: .1) !important;
+  border-radius: 4px !important;
+  border: 0px !important;
+}
+
+.ui-slider-horizontal .ui-slider-range ,
+.ui-slider-horizontal .ui-slider-handle {
+  transition: all .2s linear !important;
+}
+
+.ui-slider-horizontal .ui-slider-handle {
+  width: 20px !important;
+  height: 20px !important;
+  background-color: #fff !important;
+  border-radius: 50% !important;
+  border: 1px solid #E0D4BE !important;
+  top: calc(50% - 10px) !important;
+  
+
+  &:focus, &:hover, &:active {
+    outline: none !important;
+    background: #fff !important;
+    border: 5px solid #E0D4BE !important;
   }
 }
 
