--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -844,6 +844,127 @@ header {
       margin: auto;
     }
   }
+
+  .form-search {
+    width: 100%;
+    height: 50px;
+    position: relative;
+
+    .form-group {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      z-index: 9;
+
+      .search-btn {
+        width: 140px;
+        height: 100%;
+        position: absolute;
+        border-radius: 40px;
+        outline: none;
+        border: 0px;
+        top: 0;
+        left: 0;
+        z-index: 9;
+        background-color: var(--primary-color);
+        display: flex;
+        align-items: center;
+        align-content: center;
+        justify-content: center;
+
+        span {
+          color: var(--dark-color);
+          font-size: 15px;
+          font-weight: 500;
+        }
+
+        &:hover span {
+          animation: storm .4s linear !important;
+        }
+      }
+
+      .form-control {
+        width: 100%;
+        height: 100%;
+        background-color: var(--light-color);
+        border: 1px solid rgba($color: #E2D6C1, $alpha: 0.3);
+        border-radius: 40px;
+        padding-inline-start: 20px;
+        padding-inline-end: 150px;
+        color: var(--dark-color);
+        font-size: 15px;
+        font-weight: 500;
+
+        &::placeholder {
+          color: var(--gray-color);
+          font-size: 15px;
+          font-weight: 500;
+        }
+      }
+    }
+  }
+
+  .grid-view-btn {
+    display: flex;
+    align-content: center;
+    align-content: center;
+    justify-content: center;
+    background-color: var(--secondary-color);
+    padding: 5px 10px;
+    border-radius: 10px;
+
+    li {
+      margin-inline-end: 10px;
+
+      &:last-child {
+        margin: 0px !important;
+      }
+
+      a {
+        width: 40px;
+        height: 40px;
+        background-color: var(--light-color);
+        display: flex;
+        align-items: center;
+        align-content: center;
+        justify-content: center;
+        border-radius: 10px;
+
+        img {
+          width: 24px;
+          height: 24px;
+          object-fit: contain;
+          filter: var(--secondary-filter);
+          
+        }
+
+        &.active {
+          background-color: var(--primary-color);
+
+          img {
+            filter: none;
+          }
+        }
+      }
+    }
+  }
+
+  .list-box-view {
+    .product-box {
+      display: flex;
+      align-items: center;
+      align-content: center;
+      justify-content: space-between;
+
+      .image-content {
+        width: 160px;
+      }
+
+      .contain {
+        width: calc(100% - 162px);
+      }
+    }
+  }
 }
 
 .why {
@@ -1544,6 +1665,97 @@ footer {
           appearance: none;
           pointer-events: auto;
         }
+      }
+    }
+  }
+
+  .card {
+    background-color: transparent;
+    border-radius: 0px;
+    border: 0px;
+    padding: 15px 0px;
+    border-bottom: 1px solid #E9E9E9 !important;
+
+    &:last-child {
+      border-bottom: 0px !important;
+    }
+
+    .card-body, .card-header {
+      padding: 0px !important;
+      border: 0px;
+      border-radius: 0px;
+      background-color: transparent;
+      margin: 0px !important;
+
+      .btn {
+        padding: 0px;
+        margin: 0px !important;
+        position: relative;
+        z-index: 9;
+        width: 100%;
+        text-align: start;
+
+        &.head {
+          font-size: 16px;
+          font-weight: 900;
+        }
+
+        &::after {
+          content: '';
+          position: absolute;
+          width: 13px;
+          height: 13px;
+          background: url('../images/down_arrow.svg') center / contain no-repeat;
+          top: calc(50% - 6.5px);
+          left: 10px;
+          z-index: -1;
+          transition: all .3s linear;
+          transform: rotate(90deg);
+        }
+
+        &[aria-expanded="true"] {
+          &::after {
+            transform: rotate(0deg);
+          }
+        }
+      }
+    }
+
+    .card-body {
+      margin-top: 15px !important;
+    }
+  }
+
+  .see-more {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    margin-bottom: 10px;
+    padding: 0px;
+
+    &::after {
+      display: none;
+    }
+
+    
+    img {
+      width: 24px;
+      height: 24px;
+      object-fit: contain;
+      margin-inline-end: 10px;
+      filter: var(--gray-filter);
+      transition: all .3s linear;
+    }
+
+    span {
+      color: var(--gray-color);
+      font-size: 15px;
+      font-weight: 500;
+    }
+
+    &[aria-expanded="true"] {
+      img {
+        transform: rotate(-90deg);
       }
     }
   }
