--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2959,6 +2959,40 @@ footer .copyrights p {
   color: var(--secondary-color);
 }
 
+.about-us .contain {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.about-us .contain .brand-name img {
+  width: 120px;
+  height: 120px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.about-us .contain h1 {
+  font-size: 30px;
+  font-weight: 900;
+  margin: 20px 0px;
+  color: var(--dark-color);
+}
+.about-us .contain p {
+  color: var(--gray-color);
+  font-size: 15px;
+  font-weight: 500;
+  margin: 0px;
+}
+.about-us .image-content img {
+  width: 100%;
+  height: 250px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
 .modal.fade {
   transform: translateY(-10px);
   transition: all 0.3s linear;
