--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2213,6 +2213,43 @@ footer {
   }
 }
 
+.about-us {
+  .contain {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    .brand-name img {
+      width: 120px;
+      height: 120px;
+      object-fit: contain;
+    }
+
+    h1 {
+      font-size: 30px;
+      font-weight: 900;
+      margin: 20px 0px;
+      color: var(--dark-color);
+    }
+
+    p {
+      color: var(--gray-color);
+      font-size: 15px;
+      font-weight: 500;
+      margin: 0px;
+    }
+  }
+
+  .image-content img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    object-position: center;
+  }
+}
+
 .modal.fade {
   transform: translateY(-10px);
   transition: all .3s linear;
